--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,18 +1,41 @@
-.login {
+.login-container {
     position: absolute;
     left: 50%;
     top: 50%;
     width: 400px;
     height: 200px;
     transform: translate(-50%, -50%);
+    background-size: contain;
+    background: url("login_background.gif");
+}
+
+.login-controls {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-button {
+    width: 25%;
 }
 
 .logged {
     display: none;
 }
 
+.canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -5;
+}
+
 html, body {
     width: 100%;
     height: 100%;
-    margin: 0px;
+    margin: 0;
+    overflow: hidden;
 }
