Rendering available/selected shape is now done by rendering HTML elements

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -66,6 +66,13 @@
     display: inline-block;
 }
 
+.available-shapes {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 5px;
+}
+
 html, body {
     width: 100%;
     height: 100%;
