--- a/client/src/main.css
+++ b/client/src/main.css
@@ -73,6 +73,14 @@
     margin: 5px;
 }
 
+.remaining-time {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    padding-top: 5px;
+    transform: translate(-50%, 0);
+}
+
 html, body {
     width: 100%;
     height: 100%;
