--- a/client/src/main.css
+++ b/client/src/main.css
@@ -81,6 +81,12 @@
     transform: translate(-50%, 0);
 }
 
+#metrics {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 html, body {
     width: 100%;
     height: 100%;
