--- a/client/src/main.css
+++ b/client/src/main.css
@@ -87,6 +87,14 @@
     align-items: center;
 }
 
+#message-type-count-container {
+    width: 45%;
+}
+
+#message-type-count {
+    width: 100%;
+}
+
 html, body {
     width: 100%;
     height: 100%;
