Changed how metrics are displayed. Now uses react for front-end, but still d3 for dom manipulation
Still a lot of work to do to separate logic and rendering

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -82,9 +82,7 @@
 }
 
 #metrics {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 100%;
 }
 
 #message-type-count-container {
@@ -99,6 +97,13 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 4px;
+}
+
+.metrics-body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 /** For hrs in flex boxes*/
