--- a/client/src/main.css
+++ b/client/src/main.css
@@ -27,11 +27,17 @@
 }
 
 .canvas {
-    position: absolute;
     top: 0;
     left: 0;
     z-index: -5;
-    border: 1px solid red;
+    border: 1px solid gray;
+    margin: auto;
+}
+
+#canvas-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
 
 .player-points {
